Add Login Screen & Sign Up Screen

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -2,6 +2,7 @@
     "Khusm":"Khusm",
 
     "Login":"تسجيل الدخول",
-    "WeWillSendYouVerificationCode":"سوف نقوم بارسال رمز التحقق لك"
+    "WeWillSendYouVerificationCode":"سوف نقوم بارسال رمز التحقق لك",
+    "SignUp":"تسجيل"
 
 }
