--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,5 +1,6 @@
 {
     "Khusm":"Khusm",
     "Login":"Log in",
-    "WeWillSendYouVerificationCode":"We'll send you an SMS for verification"
+    "WeWillSendYouVerificationCode":"We'll send you an SMS for verification",
+    "SignUp":"Sign up"
 }
